--- a/.github/workflows/sync-and-deploy.yaml
+++ b/.github/workflows/sync-and-deploy.yaml
@@ -3,7 +3,8 @@ name: Deploy to EKS
 on:
   push:
     branches:
-      - '**'
+      - main
+      - dev
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -41,7 +42,7 @@ jobs:
           stage: ${{ env.stage }}
 
   deploy:
-    needs: terraform
+    needs: terraform-apply
     name: Deploy API
     runs-on: ubuntu-latest
     outputs:
