--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -3,6 +3,13 @@ name: Terraform Destroy
 on:
   workflow_dispatch:
 
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_REGION: ${{ secrets.AWS_BASE_REGION }}
+  TFSTATE_BUCKET: ${{ secrets.TFSTATE_BUCKET }}
+  TFSTATE_KEY: ${{ secrets.TFSTATE_KEY }}
+
 jobs:
   terraform-destroy:
     runs-on: ubuntu-latest
@@ -27,9 +34,9 @@ jobs:
         id: terraform-destroy
         uses: ./.github/actions/terraform-destroy
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-3
-          tfstate-bucket: ${{ secrets.TFSTATE_BUCKET }}
-          tfstate-key: ${{ secrets.TFSTATE_KEY }}
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+          tfstate-bucket: ${{ env.TFSTATE_BUCKET }}
+          tfstate-key: ${{ env.TFSTATE_KEY }}
           stage: ${{ env.stage }}
