--- a/.github/actions/terraform-plan/action.yaml
+++ b/.github/actions/terraform-plan/action.yaml
@@ -44,7 +44,7 @@ runs:
         path: ./terraform
         var_file: ./terraform/stages/${{ inputs.stage }}.tfvars
         backend_config: >
-          bucket = ${{ inputs.tfstate-bucket }}
-          key = ${{ inputs.tfstate-key }}
-          region = ${{ inputs.aws-region }}
-          encrypt = true
+          bucket=${{ inputs.tfstate-bucket }},
+          key=${{ inputs.tfstate-key }},
+          region=${{ inputs.aws-region }},
+          encrypt=true
