Update service.yaml: Change service type to ClusterIP Update service.yaml: Change service type to ClusterIP Update main.tf: Update desired_size and max_size for eks_node_group Update monitoring.tf: Remove unused helm releases Update provider.tf: Add kubernetes provider configuration Update values/crowdsec.yaml: Update namespace for serviceMonitor Add ingress.tf: Add ingress resources for dev, prod, monitoring, and falco Add security.tf: Add helm releases for falco, falco-sidekick, and crowdsec Add values/ingress.yaml: Add annotations for ingress controller

--- a/terraform/values/crowdsec.yaml
+++ b/terraform/values/crowdsec.yaml
@@ -18,16 +18,17 @@ lapi:
     enabled: true
     serviceMonitor:
       enabled: true
+      namespace: monitoring
 
 agent:
   acquisition:
-    - namespace: traefik
-      podName: traefik-*
-      program: traefik
+    - namespace: ingress-nginx
+      podName: ingress-nginx-controller-*
+      program: nginx
 
   env:
     - name: COLLECTIONS
-      value: crowdsecurity/traefik
+      value: crowdsecurity/nginx
 
   resources:
     requests:
@@ -41,3 +42,4 @@ agent:
     enabled: true
     serviceMonitor:
       enabled: true
+      namespace: monitoring
