--- a/.github/actions/terraform-apply/action.yaml
+++ b/.github/actions/terraform-apply/action.yaml
@@ -32,6 +32,8 @@ runs:
         aws-region: ${{ inputs.aws-region }}
 
     - name: Terraform Apply
+      env:
+        GRAFANA_ADMIN_PASSWORD: ${{ secrets.GRAFANA_ADMIN_PASSWORD }}
       uses: dflook/terraform-apply@v1
       with:
         path: ./terraform
