--- a/.github/workflows/sync-and-deploy.yaml
+++ b/.github/workflows/sync-and-deploy.yaml
@@ -12,6 +12,7 @@ env:
   AWS_REGION: ${{ secrets.AWS_BASE_REGION }}
   TFSTATE_BUCKET: ${{ secrets.TFSTATE_BUCKET }}
   TFSTATE_KEY: ${{ secrets.TFSTATE_KEY }}
+  GRAFANA_ADMIN_PASSWORD: ${{ secrets.GRAFANA_ADMIN_PASSWORD }}
 
 jobs: 
   terraform-apply:
@@ -85,6 +86,7 @@ jobs:
           ecr-repository: ${{ env.ECR_REPOSITORY }}
           dockerfile: ./Dockerfile
           stage: ${{ env.stage }}
+          GRAFANA_ADMIN_PASSWORD: ${{ env.GRAFANA_ADMIN_PASSWORD }}
 
       - name: Update Kubeconfig
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
