--- a/.github/actions/build-push-image/action.yaml
+++ b/.github/actions/build-push-image/action.yaml
@@ -25,7 +25,7 @@ inputs:
 outputs:
   image:
     description: 'Docker image URI'
-    value: ${{ steps.image-uri.outputs.tag }}
+    value: ${{ steps.image-uri.outputs.tag }}:latest
 
 runs:
   using: 'composite'
@@ -50,7 +50,7 @@ runs:
       id: image-uri
       shell: bash
       run: |
-        tag=${{ steps.login-ecr.outputs.registry }}/${{ inputs.ecr_repository }}/app-${{ inputs.stage }}:latest
+        tag=${{ steps.login-ecr.outputs.registry }}/${{ inputs.ecr_repository }}/app-${{ inputs.stage }}
         echo "tag=$tag" >> $GITHUB_OUTPUT
       
     - name: Build and Push Image
@@ -58,6 +58,6 @@ runs:
       with:
         push: true
         file: ${{ inputs.dockerfile }}
-        tags: ${{ steps.image-uri.outputs.tag }}
+        tags: ${{ steps.image-uri.outputs.tag }}:latest, ${{ steps.image-uri.outputs.tag }}:${{ github.sha }}
         cache-from: type=gha 
         cache-to: type=gha,mode=max
