--- a/.github/actions/build-push-image/action.yaml
+++ b/.github/actions/build-push-image/action.yaml
@@ -50,7 +50,7 @@ runs:
       id: image-uri
       shell: bash
       run: |
-        tag=${{ steps.login-ecr.outputs.registry }}/${{ inputs.ecr_repository }}/app-${{ inputs.stage }}
+        tag=${{ steps.login-ecr.outputs.registry }}/${{ inputs.ecr-repository }}/app-${{ inputs.stage }}
         echo "tag=$tag" >> $GITHUB_OUTPUT
       
     - name: Build and Push Image
