--- a/.github/workflows/sync-and-deploy.yaml
+++ b/.github/workflows/sync-and-deploy.yaml
@@ -15,6 +15,8 @@ env:
   GRAFANA_ADMIN_PASSWORD: ${{ secrets.GRAFANA_ADMIN_PASSWORD }}
   ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
   EKS_CLUSTER_NAME: ${{ secrets.EKS_CLUSTER_NAME }}
+  CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+  CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
 
 jobs: 
   terraform-apply:
@@ -77,6 +79,8 @@ jobs:
           dockerfile: ./Dockerfile
           stage: ${{ env.stage }}
           GRAFANA_ADMIN_PASSWORD: ${{ env.GRAFANA_ADMIN_PASSWORD }}
+          CLOUDFLARE_ZONE_ID: ${{ env.CLOUDFLARE_ZONE_ID }}
+          CLOUDFLARE_TOKEN: ${{ env.CLOUDFLARE_TOKEN }}
 
       - name: Update Kubeconfig
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
@@ -94,7 +98,7 @@ jobs:
         id: verify-deployment
         shell: bash
         run: |
-          kubectl rollout status deployment/${STAGE} -n ${STAGE} --timeout=5m
+          kubectl rollout status deployment/app -n ${STAGE} --timeout=5m
           if [ $? -eq 0 ]; then
             echo "status=Deployment successful!" >> $GITHUB_OUTPUT
           else
