--- a/.github/actions/terraform-destroy/action.yaml
+++ b/.github/actions/terraform-destroy/action.yaml
@@ -44,7 +44,7 @@ runs:
       env:
         TF_VAR_GRAFANA_ADMIN_PASSWORD: ${{ inputs.GRAFANA_ADMIN_PASSWORD }}
         TF_VAR_CLOUDFLARE_ZONE_ID: ${{ inputs.CLOUDFLARE_ZONE_ID }}
-        TF_VAR_CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+        TF_VAR_CLOUDFLARE_TOKEN: ${{ inputs.CLOUDFLARE_TOKEN }}
       uses: dflook/terraform-destroy@v1
       with:
         path: ./terraform
