--- a/.github/actions/build-push-image/action.yaml
+++ b/.github/actions/build-push-image/action.yaml
@@ -21,6 +21,10 @@ inputs:
   stage:
     description: 'Deployment stage'
     required: true
+  buildable:
+    description: 'Whether the image should be built and pushed'
+    required: true
+    default: 'true'
 
 outputs:
   image:
@@ -31,11 +35,13 @@ runs:
   using: 'composite'
   steps:
     - name: Set up Docker Buildx
+      if: ${{ inputs.buildable == 'true' }}
       uses: docker/setup-buildx-action@v3
       with: 
         version: latest
     
     - name: Configure AWS Credentials
+      if: ${{ inputs.buildable == 'true' }}
       uses: aws-actions/configure-aws-credentials@v4
       with: 
         aws-access-key-id: ${{ inputs.aws-access-key-id }}
@@ -43,10 +49,12 @@ runs:
         aws-region: ${{ inputs.aws-region }}
     
     - name: Login to Amazon ECR 
+      if: ${{ inputs.buildable == 'true' }}
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
     - name: Tag Image
+      if: ${{ inputs.buildable == 'true' }}
       id: image-uri
       shell: bash
       run: |
@@ -54,6 +62,7 @@ runs:
         echo "tag=$tag" >> $GITHUB_OUTPUT
       
     - name: Build and Push Image
+      if: ${{ inputs.buildable == 'true' }}
       uses: docker/build-push-action@v5
       with:
         push: true
