Refactor sync-and-deploy.yaml to add always condition for notify-slack job

--- a/.github/workflows/sync-and-deploy.yaml
+++ b/.github/workflows/sync-and-deploy.yaml
@@ -129,6 +129,7 @@ jobs:
 
   notify-slack:
     needs: deploy
+    if: always()
     runs-on: ubuntu-latest
     steps:
       - uses: rtCamp/action-slack-notify@v2
