--- a/.github/actions/terraform-apply/action.yaml
+++ b/.github/actions/terraform-apply/action.yaml
@@ -29,6 +29,9 @@ inputs:
   CLOUDFLARE_TOKEN:
     description: 'Cloudflare Token'
     required: true
+  CLOUDFLARE_EMAIL:
+    description: 'Cloudflare Email'
+    required: true
 
 runs:
   using: 'composite'
@@ -45,6 +48,7 @@ runs:
         TF_VAR_GRAFANA_ADMIN_PASSWORD: ${{ inputs.GRAFANA_ADMIN_PASSWORD }}
         TF_VAR_CLOUDFLARE_ZONE_ID: ${{ inputs.CLOUDFLARE_ZONE_ID }}
         TF_VAR_CLOUDFLARE_TOKEN: ${{ inputs.CLOUDFLARE_TOKEN }}
+        TF_VAR_CLOUDFLARE_EMAIL: ${{ inputs.CLOUDFLARE_EMAIL }}
       uses: dflook/terraform-apply@v1
       with:
         path: ./terraform
