--- a/.github/actions/terraform-apply/action.yaml
+++ b/.github/actions/terraform-apply/action.yaml
@@ -44,6 +44,9 @@ inputs:
   TAILSCALE_CLIENT_SECRET:
     description: 'Tailscale Client Secret'
     required: true
+  CROWDSEC_ENROLL_KEY:
+    description: 'CrowdSec Enroll Key'
+    required: true
 
 runs:
   using: 'composite'
@@ -65,6 +68,7 @@ runs:
         TF_VAR_SLACK_WEBHOOK: ${{ inputs.SLACK_WEBHOOK }}
         TF_VAR_TAILSCALE_CLIENT_ID: ${{ inputs.TAILSCALE_CLIENT_ID }}
         TF_VAR_TAILSCALE_CLIENT_SECRET: ${{ inputs.TAILSCALE_CLIENT_SECRET }}
+        TF_VAR_CROWDSEC_ENROLL_KEY: ${{ inputs.CROWDSEC_ENROLL_KEY }}
       uses: dflook/terraform-apply@v1
       with:
         path: ./terraform
