--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -17,6 +17,7 @@ env:
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
   TAILSCALE_CLIENT_ID: ${{ secrets.TAILSCALE_CLIENT_ID }}
   TAILSCALE_CLIENT_SECRET: ${{ secrets.TAILSCALE_CLIENT_SECRET }}
+  CROWDSEC_ENROLL_KEY: ${{ secrets.CROWDSEC_ENROLL_KEY }}
 
 jobs:
   terraform-destroy:
@@ -56,3 +57,4 @@ jobs:
           SLACK_WEBHOOK: ${{ env.SLACK_WEBHOOK }}
           TAILSCALE_CLIENT_ID: ${{ env.TAILSCALE_CLIENT_ID }}
           TAILSCALE_CLIENT_SECRET: ${{ env.TAILSCALE_CLIENT_SECRET }}
+          CROWDSEC_ENROLL_KEY: ${{ env.CROWDSEC_ENROLL_KEY }}
