--- a/.github/workflows/plan.yaml
+++ b/.github/workflows/plan.yaml
@@ -25,6 +25,7 @@ env:
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
   TAILSCALE_CLIENT_ID: ${{ secrets.TAILSCALE_CLIENT_ID }}
   TAILSCALE_CLIENT_SECRET: ${{ secrets.TAILSCALE_CLIENT_SECRET }}
+  CROWDSEC_ENROLL_KEY: ${{ secrets.CROWDSEC_ENROLL_KEY }}
 
 jobs: 
   terraform-plan:
@@ -65,3 +66,4 @@ jobs:
           SLACK_WEBHOOK: ${{ env.SLACK_WEBHOOK }}
           TAILSCALE_CLIENT_ID: ${{ env.TAILSCALE_CLIENT_ID }}
           TAILSCALE_CLIENT_SECRET: ${{ env.TAILSCALE_CLIENT_SECRET }}
+          CROWDSEC_ENROLL_KEY: ${{ env.CROWDSEC_ENROLL_KEY }}
