--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,3 +1,6 @@
+# The pipeline can have failed steps marked as successful by using continue-on-error: true. 
+# If needed, I just went with the default setting for the sake of simplicity and used the always() condition to ensure that any step runs regardless of the outcome of the previous steps.
+
 name: Test Pipeline
 
 on:
@@ -11,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Test Application
     outputs:
-      message: "Bandit Security Linting: ${{ steps.bandit.outcome }}\nTrufflehog Leaked Secret Scanning: ${{ steps.trufflehog.outcome }}\nGrype Container Vulnerability Scanning: ${{ steps.grype.outcome }}\nApplication Tests: ${{ steps.tests.outcome }}"
+      message: "Bandit Security Linting: ${{ steps.bandit.outcome }}\nTrufflehog Leaked Secret Scanning: ${{ steps.trufflehog.outcome }}\nGrype Container Vulnerability Scanning: ${{ steps.grype.outcome }}\nApplication Tests: ${{ steps.tests.outcome }}\nFlake8 Linting: ${{ steps.lint.outcome }}"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -62,6 +65,11 @@ jobs:
         if: always()
         run: make run
       
+      - name: Flake8 Linting # I had linting running inside the container as the application uses uvicorn, a server that won't exit if any errors are found and thus the container would not stop running
+        id: lint
+        if: always()
+        run: make lint
+
       - name: Run-Tests
         id: tests
         if: always()
