--- a/terraform/assets/crowdsec-values.yaml
+++ b/terraform/assets/crowdsec-values.yaml
@@ -19,6 +19,22 @@ lapi:
     serviceMonitor:
       enabled: true
       namespace: monitoring
+  
+  env: 
+    - name: ENROLL_KEY
+      valueFrom:
+        secretKeyRef:
+          name: crowdsec-enroll-key
+          key: ENROLL_KEY
+    - name: ENROLL_INSTANCE_NAME
+      value: "aqemia-adaml-eks-cluster"
+    - name: ENROLL_TAGS
+      value: "aqemia adaml eks cluster k8s"
+    - name: BOUNCER_KEY_nginx
+      valueFrom:
+        secretKeyRef:
+          name: crowdsec-bouncer-key
+          key: BOUNCER_KEY_nginx
 
 agent:
   acquisition:
