--- a/.github/workflows/sync-and-deploy.yaml
+++ b/.github/workflows/sync-and-deploy.yaml
@@ -36,6 +36,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Checkov Scan
+        id: checkov-scan
+        uses: bridgecrewio/checkov-action@v12
+        with:
+          directory: .
+
       - name: Terraform Apply
         id: terraform-apply
         uses: ./.github/actions/terraform-apply
