feat: Add soft_fail option to Checkov scan step in GitHub workflows

--- a/.github/workflows/plan.yaml
+++ b/.github/workflows/plan.yaml
@@ -43,6 +43,7 @@ jobs:
         uses: bridgecrewio/checkov-action@v12
         with:
           directory: .
+          soft_fail: true
 
       - name: Terraform Plan
         id: terraform-plan
