--- a/.github/workflows/sync-and-deploy.yaml
+++ b/.github/workflows/sync-and-deploy.yaml
@@ -41,6 +41,7 @@ jobs:
         uses: bridgecrewio/checkov-action@v12
         with:
           directory: .
+          soft_fail: true
 
       - name: Terraform Apply
         id: terraform-apply
