--- a/.github/workflows/tf-drift-detection.yaml
+++ b/.github/workflows/tf-drift-detection.yaml
@@ -33,7 +33,10 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       TFPLAN_EXIT_CODE: ${{ steps.tfplan.outputs.exitcode }}
-    
+    defaults:
+      run:
+        working-directory: ./terraform
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
