Update Python version in Dockerfile to 3.12

--- a/.github/workflows/sync-and-deploy.yaml
+++ b/.github/workflows/sync-and-deploy.yaml
@@ -142,6 +142,21 @@ jobs:
             echo "status=No changes to deploy" >> $GITHUB_OUTPUT
           fi
 
+      - name: ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.13.0
+        with: 
+          token: ${{ secrets.GIT_TOKEN }}
+          target: "https://aqemia.admida0ui.de/docs/"
+
+      - name: Rollback on Penertration Test Failure
+        if: failure()
+        env:
+          STAGE: "prod"
+        shell: bash
+        run: |
+          kubectl rollout undo deployment/app -n ${STAGE}
+          echo "status=Deployment failed because of Penetration Test Failure! Rolling back to previous deployment" >> $GITHUB_OUTPUT
+
   notify-slack:
     needs:
       - deploy
