--- a/.github/workflows/tf-drift-detection.yaml
+++ b/.github/workflows/tf-drift-detection.yaml
@@ -118,7 +118,7 @@ jobs:
         env:
           SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
         with:
-            github-token: ${{ secrets.GIT_TOKEN }}
+            github-token: ${{ github.token }}
             script: |
               const body = `${process.env.SUMMARY}`;
               const title = 'Terraform Configuration Drift Detected';
@@ -163,7 +163,7 @@ jobs:
         if: steps.tf-plan.outputs.exitcode == 0
         uses: actions/github-script@v7
         with:
-            github-token: ${{ secrets.GIT_TOKEN }}
+            github-token: ${{ github.token }}
             script: |
               const title = 'Terraform Configuration Drift Detected';
               const creator = 'github-actions[bot]'
