--- a/terraform/assets/kyverno-values.yaml
+++ b/terraform/assets/kyverno-values.yaml
@@ -1,17 +1,17 @@
 config:
   webhooks:
-    - namespaceSelector:
-        matchExpressions:
-          - key: kubernetes.io/metadata.name
-            operator: NotIn
-            values:
-              - kube-system
-              - kyverno
-              - monitoring
-              - falco 
-              - crowdsec 
-              - nginx-ingress
-              - tailscale 
-              - cert-manager
-              - kube-public
-              - kube-node-lease
+    namespaceSelector:
+      matchExpressions:
+        - key: kubernetes.io/metadata.name
+          operator: NotIn
+          values:
+            - kube-system
+            - kyverno
+            - monitoring
+            - falco 
+            - crowdsec 
+            - nginx-ingress
+            - tailscale 
+            - cert-manager
+            - kube-public
+            - kube-node-lease
