--- a/.github/workflows/tf-drift-detection.yaml
+++ b/.github/workflows/tf-drift-detection.yaml
@@ -2,8 +2,8 @@ name: Terraform Drift Detection
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 3 * * *'
+  # schedule:
+  #   - cron: '0 3 * * *'
 
 permissions:
   contents: read
