--- a/.github/workflows/zap-fullscan.yaml
+++ b/.github/workflows/zap-fullscan.yaml
@@ -2,8 +2,8 @@ name: Nightly DAST Scans
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 3 * * *'
+  # schedule:
+  #   - cron: '0 3 * * *'
 
 jobs:
   owasp-zap-full-scan:
